INSERÇÃO DE RESPONSIVIDADE

--- a/uratingcorp.vbproj
+++ b/uratingcorp.vbproj
@@ -131,6 +131,9 @@
   <ItemGroup>
     <Content Include="About.aspx" />
     <Content Include="avaliacao.png" />
+    <Content Include="avaliacaolanding.png" />
+    <Content Include="avaliacaopessoas.png" />
+    <Content Include="cadastro.png" />
     <Content Include="casa.png" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
@@ -365,6 +368,13 @@
       <DependentUpon>Site1.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="Site2.Master.designer.vb">
+      <DependentUpon>Site2.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Site2.Master.vb">
+      <DependentUpon>Site2.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="ViewSwitcher.ascx.vb">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -422,6 +432,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Site1.Master" />
+    <Content Include="Site2.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
