ajuste forms registro, login page e inicio da home page

--- a/uratingcorp.vbproj
+++ b/uratingcorp.vbproj
@@ -150,8 +150,8 @@
     <Content Include="Content\landingPage.css" />
     <Content Include="Content\estilo.css" />
     <Content Include="fundo.jpg" />
-    <Content Include="landingPage.aspx" />
     <Content Include="HomePage.aspx" />
+    <Content Include="landingPage.aspx" />
     <Content Include="rating.png" />
     <Content Include="Register.aspx" />
     <Content Include="Login.aspx" />
@@ -304,18 +304,18 @@
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
-    <Compile Include="landingPage.aspx.designer.vb">
-      <DependentUpon>landingPage.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="landingPage.aspx.vb">
-      <DependentUpon>landingPage.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
     <Compile Include="HomePage.aspx.designer.vb">
       <DependentUpon>HomePage.aspx</DependentUpon>
     </Compile>
     <Compile Include="HomePage.aspx.vb">
       <DependentUpon>HomePage.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="landingPage.aspx.designer.vb">
+      <DependentUpon>landingPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="landingPage.aspx.vb">
+      <DependentUpon>landingPage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Register.aspx.designer.vb">
