--- a/Web.config
+++ b/Web.config
@@ -7,27 +7,48 @@
 	<system.web>
 
 		<authentication mode="Forms">
-		 <forms name="autenticacao" loginUrl="Login.aspx"  protection="All" defaultUrl="HomePage.aspx" timeout="20" path="/"/>  
+		 <forms name="autenticacao" loginUrl="Login.aspx" protection="All" defaultUrl="HomePage.aspx" timeout="20" path="/" />  
 		</authentication>
 	</system.web>
 	
 	<location path="Profile.aspx">
 		<system.web>
 			<authorization>
-				<deny users="?"/>
+				<deny users="?" />
 			</authorization>
 		</system.web>
 		</location>
 	<location path="HomePage.aspx">
 		<system.web>
 			<authorization>
-				<deny users="?"/>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="MovieRating.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="BookRating.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="SeriesRating.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
 			</authorization>
 		</system.web>
 	</location>
 	<system.web>
 		<authorization>
-			<allow users="*"/>
+			<allow users="*" />
 		</authorization>
 		<compilation debug="true" strict="false" explicit="true" targetFramework="4.7.2" />
 		<httpRuntime targetFramework="4.7.2" />
