--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="AspNet.ScriptManager.bootstrap" version="4.6.0" targetFramework="net472" />
   <package id="AspNet.ScriptManager.jQuery" version="3.6.0" targetFramework="net472" />
   <package id="bootstrap" version="4.6.0" targetFramework="net472" />
+  <package id="Font.Awesome" version="5.15.3" targetFramework="net472" />
   <package id="jQuery" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core.pt-br" version="1.0.2" targetFramework="net472" />
