--- a/uratingcorp.vbproj
+++ b/uratingcorp.vbproj
@@ -130,25 +130,45 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="Avaliacaofilmes.aspx" />
+    <Content Include="Avaliacaolivros.aspx" />
+    <Content Include="AvaliacaoSeries.aspx" />
+    <Content Include="books.png" />
+    <Content Include="Content\all.css" />
     <Content Include="avaliacao.png" />
     <Content Include="avaliacaolanding.png" />
+    <Content Include="avaliacaopaglivros.png" />
     <Content Include="avaliacaopessoas.png" />
     <Content Include="cadastro.png" />
     <Content Include="casa.png" />
     <Content Include="Contact.aspx" />
+    <Content Include="Content\all.min.css" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\brands.css" />
+    <Content Include="Content\brands.min.css" />
     <Content Include="Content\cinema.jpg" />
     <Content Include="Content\estilo.js" />
+    <Content Include="Content\fontawesome.css" />
+    <Content Include="Content\fontawesome.min.css" />
     <Content Include="Content\footercss.css" />
+    <Content Include="Content\regular.css" />
+    <Content Include="Content\regular.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\solid.css" />
+    <Content Include="Content\solid.min.css" />
     <Content Include="Content\style.css" />
     <Content Include="Content\landingPage.css" />
     <Content Include="Content\estilo.css" />
+    <Content Include="Content\svg-with-js.css" />
+    <Content Include="Content\svg-with-js.min.css" />
+    <Content Include="Content\v4-shims.css" />
+    <Content Include="Content\v4-shims.min.css" />
+    <Content Include="filme.png" />
     <Content Include="fundo.jpg" />
     <Content Include="HomePage.aspx" />
     <Content Include="landingPage.aspx" />
@@ -164,6 +184,25 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="Profile.aspx" />
+    <Content Include="MovieRating.aspx" />
+    <Content Include="BookRating.aspx" />
+    <Content Include="Scripts\fontawesome\all.js" />
+    <Content Include="Scripts\fontawesome\all.min.js" />
+    <Content Include="Scripts\fontawesome\brands.js" />
+    <Content Include="Scripts\fontawesome\brands.min.js" />
+    <Content Include="Scripts\fontawesome\conflict-detection.js" />
+    <Content Include="Scripts\fontawesome\conflict-detection.min.js" />
+    <Content Include="Scripts\fontawesome\fontawesome.js" />
+    <Content Include="Scripts\fontawesome\fontawesome.min.js" />
+    <Content Include="Scripts\fontawesome\regular.js" />
+    <Content Include="Scripts\fontawesome\regular.min.js" />
+    <Content Include="Scripts\fontawesome\solid.js" />
+    <Content Include="Scripts\fontawesome\solid.min.js" />
+    <Content Include="Scripts\fontawesome\v4-shims.js" />
+    <Content Include="Scripts\fontawesome\v4-shims.min.js" />
+    <Content Include="serie.png" />
+    <Content Include="SeriesRating.aspx" />
+    <Content Include="Admin\UserControl.aspx" />
     <None Include="My Project\PublishProfiles\urating - Web Deploy.pubxml" />
     <Content Include="logoMack.png" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -286,6 +325,21 @@
     <Content Include="walter.png" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
+    <Content Include="webfonts\fa-brands-400.svg" />
+    <Content Include="webfonts\fa-regular-400.svg" />
+    <Content Include="webfonts\fa-solid-900.svg" />
+    <Content Include="webfonts\fa-solid-900.woff2" />
+    <Content Include="webfonts\fa-solid-900.woff" />
+    <Content Include="webfonts\fa-solid-900.ttf" />
+    <Content Include="webfonts\fa-solid-900.eot" />
+    <Content Include="webfonts\fa-regular-400.woff2" />
+    <Content Include="webfonts\fa-regular-400.woff" />
+    <Content Include="webfonts\fa-regular-400.ttf" />
+    <Content Include="webfonts\fa-regular-400.eot" />
+    <Content Include="webfonts\fa-brands-400.woff2" />
+    <Content Include="webfonts\fa-brands-400.woff" />
+    <Content Include="webfonts\fa-brands-400.ttf" />
+    <Content Include="webfonts\fa-brands-400.eot" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.vb" />
@@ -295,6 +349,27 @@
     </Compile>
     <Compile Include="About.aspx.vb">
       <DependentUpon>About.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="Avaliacaofilmes.aspx.designer.vb">
+      <DependentUpon>Avaliacaofilmes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Avaliacaofilmes.aspx.vb">
+      <DependentUpon>Avaliacaofilmes.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="Avaliacaolivros.aspx.designer.vb">
+      <DependentUpon>Avaliacaolivros.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Avaliacaolivros.aspx.vb">
+      <DependentUpon>Avaliacaolivros.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="AvaliacaoSeries.aspx.designer.vb">
+      <DependentUpon>AvaliacaoSeries.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AvaliacaoSeries.aspx.vb">
+      <DependentUpon>AvaliacaoSeries.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
     <Compile Include="Contact.aspx.designer.vb">
@@ -354,13 +429,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Site.Master.designer.vb">
-      <DependentUpon>Site.Master</DependentUpon>
-    </Compile>
-    <Compile Include="Site.Master.vb">
-      <DependentUpon>Site.Master</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
     <Compile Include="Site1.Master.designer.vb">
       <DependentUpon>Site1.Master</DependentUpon>
     </Compile>
@@ -382,18 +450,39 @@
     <Compile Include="ViewSwitcher.ascx.designer.vb">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
     </Compile>
-    <Compile Include="Site.Mobile.Master.vb">
-      <DependentUpon>Site.Mobile.Master</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Site.Mobile.Master.designer.vb">
-      <DependentUpon>Site.Mobile.Master</DependentUpon>
-    </Compile>
     <Compile Include="Profile.aspx.designer.vb">
       <DependentUpon>Profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Profile.aspx.vb">
       <DependentUpon>Profile.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="MovieRating.aspx.designer.vb">
+      <DependentUpon>MovieRating.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MovieRating.aspx.vb">
+      <DependentUpon>MovieRating.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="BookRating.aspx.designer.vb">
+      <DependentUpon>BookRating.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="BookRating.aspx.vb">
+      <DependentUpon>BookRating.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="SeriesRating.aspx.designer.vb">
+      <DependentUpon>SeriesRating.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="SeriesRating.aspx.vb">
+      <DependentUpon>SeriesRating.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="Admin\UserControl.aspx.designer.vb">
+      <DependentUpon>UserControl.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\UserControl.aspx.vb">
+      <DependentUpon>UserControl.aspx</DependentUpon>
       <SubType>ASPXCodebehind</SubType>
     </Compile>
   </ItemGroup>
@@ -415,8 +504,6 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
-    <Content Include="Site.Master" />
-    <Content Include="Site.Mobile.Master" />
     <Content Include="ViewSwitcher.ascx" />
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.6.0.slim.min.map" />
