Inserção das páginas de cadastro de livros e séries e separação de usuários por role #### INICIO DO BACK END#####

--- a/Web.config
+++ b/Web.config
@@ -4,6 +4,13 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionStrings>
+		<add name="con" connectionString="Data Source=friendflixserver.database.windows.net;Initial Catalog=friendflixDB;Persist Security Info=True;User ID=friendflix;Password=M@ckenzie"></add>
+	</connectionStrings>
+	
+	
+	
+	
 	<system.web>
 
 		<authentication mode="Forms">
