--- a/Web.config
+++ b/Web.config
@@ -15,7 +15,7 @@
 	<system.web>
 		
 		<authentication mode="Forms">
-		 <forms name="autenticacao" loginUrl="Login.aspx" protection="All" timeout="30" defaultUrl="HomePage.aspx" path="/" />  
+		 <forms name="autenticacao" loginUrl="Login.aspx" timeout="30" defaultUrl="HomePage.aspx" path="/" />  
 		</authentication>
 	</system.web>
 	
@@ -33,6 +33,57 @@
 			</authorization>
 		</system.web>
 	</location>
+	
+	<location path="Avaliacaofilmes.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="Avaliacaolivros.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="AvaliacaoSeries.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="CadastroFilmes.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="CadastroLivros.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="GerenciarAvaliacoes.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="CadastroFilmes.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	
 	<location path="MovieRating.aspx">
 		<system.web>
 			<authorization>
