criação de algumas novas páginas, mas sem conteúdo efetivo

--- a/Web.config
+++ b/Web.config
@@ -69,21 +69,34 @@
 			</authorization>
 		</system.web>
 	</location>
-	<location path="GerenciarAvaliacoes.aspx">
+	<location path="CadastroSeries.aspx">
 		<system.web>
 			<authorization>
 				<deny users="?" />
 			</authorization>
 		</system.web>
 	</location>
-	<location path="CadastroFilmes.aspx">
+	<location path="GerenciaCadfilmes.aspx">
 		<system.web>
 			<authorization>
 				<deny users="?" />
 			</authorization>
 		</system.web>
 	</location>
-	
+	<location path="GerenciaCadseries.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="GerenciaCadlivros.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>	
 	<location path="MovieRating.aspx">
 		<system.web>
 			<authorization>
