--- a/Web.config
+++ b/Web.config
@@ -118,6 +118,27 @@
 			</authorization>
 		</system.web>
 	</location>
+	<location path="BiblioLivros.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="BiblioSeries.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="BiblioFilmes.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
 	<system.web>
 		<authorization>
 			<allow users="*" />
