Término da página de perfil e lista de amigos

--- a/Web.config
+++ b/Web.config
@@ -139,6 +139,34 @@
 			</authorization>
 		</system.web>
 	</location>
+	<location path="Perfil.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="UserControl.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="SolicitacaoAmizade.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
+	<location path="busca.aspx">
+		<system.web>
+			<authorization>
+				<deny users="?" />
+			</authorization>
+		</system.web>
+	</location>
 	<system.web>
 		<authorization>
 			<allow users="*" />
